# braille-translator

./: .gitignore  .gitmodules  Dockerfile  MANIFEST.in  README.md  main.py  main_v5.py  pyproject.toml  requirements.txt  test_tree.txt  translator.py
.github/workflows/: python.yaml
.venv311/: pyvenv.cfg
braille_translator/: __init__.py  config.json  pyproject.toml  translator.py  translator_v1.py  translator_v2.py  translator_v5.py
examples/: example_usage.py
scripts/: import_all_tables.sh
tables/: Makefile  Makefile.in
tests/: __init__.py  conftest.py  test.py  test_translator.py  test_translator_v2.py  test_translator_v5.py
